fixed issue where login button would flicker if signed in by adding undefined loading state to session

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -94,7 +94,6 @@ body {
   font-style: italic;
   font-weight: 400;
   color: #ffff;
-  font-size: min(1.59375rem, 3.75vw);
   margin-bottom: 3em;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
     0px 18px 23px rgba(0, 0, 0, 0.1);
@@ -108,7 +107,7 @@ body {
 
 input[type="search"] {
   background-color: #f5f5f5;
-  width: max(37.5vw, 15em);
+  width: max(37.5vw, 16em);
   border: none;
   margin: 0;
   padding: 10px 10px 10px 50px;
